# trust-certification-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md
.github/workflows/: ci.yml
badge-service/: worker.ts  wrangler.toml
badges/generator/: package.json  tsconfig.json
badges/generator/src/: badge.ts  index.ts
docs/: badge-usage.md  certification-fees.md  certification-levels.md  governance-score-badge.md  self-assessment.md  submission.md
examples/: README.md  certify_sdk.py  score-example.py
marketplace/: README.md  example-listing.json  schema.json
python/: pyproject.toml
python/src/: certification_lifecycle.py  enterprise_dashboard.py  governance_score.py
python/src/aumos_certify/: __init__.py  cli.py  history.py  levels.py  report.py  runner.py  scorer.py  types.py
python/src/aumos_certify/exporters/: __init__.py  html_exporter.py  json_exporter.py  markdown_exporter.py
python/src/aumos_certify/protocols/: __init__.py  aeap.py  aip.py  amgp.py  aoap.py  atp.py  cross_protocol.py
python/tests/: conftest.py  test_certification.py
scripts/: ci-cert-check.sh  fire-line-audit.sh
