[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-certify"
version = "0.1.0"
description = "AumOS self-assessment toolkit for the AumOS Certified badge program"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "MuVeraAI Corporation" }]
requires-python = ">=3.10"
keywords = ["aumos", "certification", "conformance", "governance", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aumos-certify = "aumos_certify.cli:app"

[project.urls]
Repository = "https://github.com/aumos-ai/trust-certification-toolkit"
Documentation = "https://docs.aumos.ai/certification"
"Bug Tracker" = "https://github.com/aumos-ai/trust-certification-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_certify"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
